sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


	if (plusPetit(i,j)){
		echange(i,j)
	}


}
